Interface updates and fixes (#10)
* Prepare interface for EVM address in Address component

* Fix forget/export states in account card

* Fix Bind EVM view's styles

* Polish EVM address in Address component

* Show "Selected" label on active account

* Hide Selected button, emphasize Bind EVM button

* Change font

* Fix headline color in dark theme

* Properly handle long account names

* Add settings to header

* Use different font only for titles

* Display EVM address in new line to avoid overflowing

* Change house icon to coins

* Use new button component for CTA buttons

* Change account click action in header, add separate settings button

* Place visibility button next to account balance

--- a/packages/extension/public/style/reef-styles.css
+++ b/packages/extension/public/style/reef-styles.css
@@ -361,7 +361,7 @@ svg.fill-white {
   margin: 0 auto;
 }
 
-.bind-evm .uik-button {
+.bind-evm .uik-cta {
   width: 100%;
 }
 
@@ -397,6 +397,23 @@ svg.fill-white {
   font-size: 14px;
   opacity: 1 !important;
   color: black;
+}
+
+.next-step-btn {
+  width: 100%;
+}
+
+.next-step-btn .uik-cta__text {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.next-step-btn .arrowRight {
+  position: absolute;
+  right: 0;
 }
 
 .dark-theme .card {
